# CoffeeWood

./: .gitignore  CMakeLists.txt  CoffeeWood.yml  README.md  init.cpp
.github/workflows/: codeql.yml  cwpl.yml
src/: bit.c  bit_get.c  bit_io.c  bit_nullcheck.c  bit_process.c  bit_stream.c  bootio.c  color.c  crypto.c  crypto.cpp  crypto.h  file_includes.c  imageio.c  import.c  kernel_io.c  math.c  math.h  ms.config  network.h  prtmsg.c  readonly.c  setchrstr.c  writehash.c  writehash_file.c
