cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
project(CoffeeWood)
add_executable(CoffeeWood_CWPL src/CoffeeWood_CWPL.cpp)
add_library(cwpl STATIC src/library*.cpp src/library*.hpp)
set_target_properties(cwpl PROPERTIES VERSION "0.0")
install(TARGETS CoffeeWood_CWPL cwpl DESTINATION bin/)
file(GLOB COFFEEWOOD_SOURCES "*src/*.cxx*.cpp*.hpp*.h*")
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_BUILD_TYPE Release)

foreach(_source ${COFFEEWOOD_SOURCES})
    list(REMOVE_ITEM COFFEEWOOD_SOURCES ${_source})
    add_custom_command(ALL TARGET CoffeeWood_CWPL PRECOMPILE_SOURCE ${_source})
endforeach()

install(FILES src/${PROJECT_Name}.pro DESTINATION share/qtcreator/)
